<resources>
    <string name="app_name" translatable="false">Wescape</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Login</string>
    <string name="action_use_offline">Use Offline</string>
    <string name="action_sign_in_short" translatable="false">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reset_password_text">Forgot the password? Restore it</string>
    <string name="create_account_text">Don\'t you have an account? Signup</string>
    <string name="action_signup">Signup</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_signup_short" translatable="false">Signup</string>
    <string name="authentication_title_bar" translatable="false">Login</string>
    <string name="error_mismatching_password_confirm">The confirm password does not match</string>
    <string name="title_activity_navigation" translatable="false">Home</string>
    <string name="action_settings">Settings</string>
    <string name="description_request_reset">Insert the email address used at signup time and we\'ll send you the instructions to reset your old password</string>
    <string name="action_reset_request">Request a new password</string>
    <string name="prompt_secretcode">Secret Code</string>
    <string name="action_reset_passwd">Confirm Password</string>
    <string name="description_reset_password">Insert a new password in the fields below (we\'ve sent you an email with the secret code)</string>
    <string name="error_invalid_secretcode">This secret code is invalid</string>
    <string name="accessibility_logo_description">Wescape Logo</string>
    <string name="action_send_short">Send</string>
    <string name="error_incorrect_password_confirm">The confirm password doesn\'t match</string>
    <string name="action_emergency">Emergency</string>
    <string name="navigation_starting_from">from</string>
    <string name="navigation_going_to">to</string>
    <string name="navigation_select_origin">Select origin</string>
    <string name="navigation_select_destination">Select destination</string>
    <string name="description_destination_emergency">The destination will be automatically selected</string>
    <string name="error_network_download_image">Some errors occurred while downloading maps</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_select_from_map">Select from the map</string>
    <string name="navigation_select_from_qr">Scan QR code</string>
    <string name="action_back">Back</string>
    <string name="action_confirm">Confirm</string>
    <string name="title_navigator">Indications</string>
    <string name="action_qr">Scan the QR code</string>
    <string name="error_no_camera_found">The camera was not found</string>
    <string name="toast_hidden_menu_feedback">Keep on clicking to open preferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_offline_warning">Due to the lack of funds, our server is currently offline. Our app remains available for offline usage only as a proof of concept.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_hostname" translatable="false">Hostname</string>
    <string name="pref_default_hostname" translatable="false">10.42.0.1</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="search_hint">Search for a point</string>
    <string name="select_different_nodes">The starting point must be different from the arrival</string>
    <string name="select_start_point">Select a starting point</string>
    <string name="select_end_point">Select an ending point</string>
    <string name="error_duplicated_email">This email address is already in use</string>
    <string name="error_signup_general">Some error occurred while signing up</string>
    <string name="error_connection_failed">Connection error. Check internet connectivity.</string>
    <string name="no_node_in_range">This point is not selectable</string>
    <string name="selected_node">Selected node:</string>
    <string name="error_email_not_found">There isn\'t an account associated with this email</string>
    <string name="error_wrong_secret_code">Secret code does not match</string>
    <string name="error_secret_code_expired">Code expired</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="computing_route">Computing best route</string>
    <string name="please_wait">Please wait...</string>
    <string name="select_path">Select a path</string>
    <string name="action_go_ahead">Go ahead</string>
    <string name="action_turn_right">Turn right</string>
    <string name="action_turn_left">Turn left</string>
    <string name="action_turn_back_right">Turn back right</string>
    <string name="action_turn_back_left">Turn back left</string>
    <string name="action_go_upstairs">Go upstairs</string>
    <string name="action_go_downstairs">Go downstairs</string>
    <string name="action_exit">Exit from the room</string>
    <string name="action_destination_reached">You are arrived</string>
    <string name="congratulation">Congratulation!</string>
    <string name="toward_node">toward node %1$s</string>
    <string name="next_node">Next</string>
    <string name="label_select_path">Route %d</string>
    <string name="find_nearest_exit">Finding nearest exit</string>
    <string name="map_placeholder">Select a node to start navigation</string>
    <string name="wescape_notification">Wescape Notification</string>
    <string name="emergency_dialog_title">Situation of emergency</string>
    <string name="emergency_dialog_description">Keep calm, Wescape will guide you to nearest exit</string>
    <string name="action_logout" translatable="false">Log out</string>
    <string name="error_no_data_cached">There is no data download from previous sessions. You must login at least one time to use the navigator.</string>
    <string name="error_reading_qr">Error reading QR code</string>
</resources>
